[project]
name = "asrs-early-warning"
version = "0.1.0"
description = "Aviation Safety Early Warning System — IATA Case Study"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    # Layer 1
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "plotly>=5.17",
    # Layer 2
    "bertopic>=0.16",
    "sentence-transformers>=2.6",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    # Layer 3
    "rapidfuzz>=3.5",
    # Layer 4
    "chromadb>=0.4",
    "anthropic>=0.25",
    "python-dotenv>=1.0",
    # Dev
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "rich>=13.0",
    "streamlit>=1.58.0",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
]
